2004-11-29  Kensuke Matsuzaki  <zakki@peppermint.jp>

	* winmultiwindowwm.c:
	Fixed windows.h include for cygwin.
	
	* winmultiwindowwindow.c:
	Bugzilla #1945: Stop unnecessary reordering.

2004-11-24  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwm.c:
	Finally the multiwindow mode defines a default cursor

2004-11-22  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwm.c: 
	Fixes for building multiwindow and internalwm on mingw
	* winwin32rootless.c:
	Changed some debugging output

2004-11-22  Alexander Gottwald  <ago at freedesktop dot org>

	* InitOutput.c, winglobals.c, winprocarg.c:
	Xming: Place logfile in users tempdir
	
2004-11-15  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile:
	Remove override of HasSnprintf

2004-11-15  Alexander Gottwald  <ago at freedesktop dot org>

	* Imakefile:
	* InitInput.c: (InitInput):
	* InitOutput.c: (winClipboardShutdown), (ddxGiveUp),
	(winCheckMount), (winGetBaseDir), (winFixupPaths), (OsVendorInit),
	(winCheckDisplayNumber):
	* win.h:
	* winblock.c: (winBlockHandler):
	* winclipboard.h:
	* winclipboardthread.c: (winClipboardProc):
	* winclipboardwndproc.c: (winClipboardWindowProc):
	* winconfig.c: (winConfigKeyboard), (winConfigFiles):
	* wincreatewnd.c: (winCreateBoundingWindowWindowed):
	* windialogs.c: (winDisplayExitDialog), (winExitDlgProc),
	(winAboutDlgProc):
	* winengine.c: (winSetEngine):
	* winerror.c: (OsVendorVErrorF), (winMessageBoxF), (scprintf):
	* winglobals.c: (winInitializeGlobals):
	* winkeybd.c: (winKeybdReleaseKeys):
	* winmultiwindowicons.c:
	* winmultiwindowwindow.c: (winCreateWindowsWindow):
	* winmultiwindowwm.c:
	* winprefs.c: (ReloadPrefs), (HandleCustomWM_COMMAND):
	* winprocarg.c: (ddxProcessArgument):
	* winscrinit.c: (winFinishScreenInitFB):
	* winshadddnl.c:
	* wintrayicon.c: (winHandleIconMessage):
	* winwakeup.c: (winWakeupHandler):
	* winwin32rootless.c: (winMWExtWMCreateFrame):
	* winwindow.c: (winReshapeRootless):
	* winwindow.h: