@@ -1,3 +1,8 @@
+2004-12-01  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* InitOutput.c:
+	Set XERRORDB environment variable to relocate the XErrorDB file
+
 2004-11-29  Kensuke Matsuzaki  <zakki@peppermint.jp>
 
 	* winmultiwindowwm.c:
